@@ -1,13 +1,11 @@
-#!perl -T
+#!perl -w
 
 use strict;
 use warnings;
+
+use Test::DescribeMe qw(author);
 use Test::Most;
+use Test::Needs { 'Test::CheckManifest' => '0.9' };
 
-unless($ENV{AUTHOR_TESTING}) {
-	plan(skip_all => 'Author tests not required for installation');
-}
-
-eval "use Test::CheckManifest 0.9";
-plan(skip_all => 'Test::CheckManifest 0.9 required') if $@;
+Test::CheckManifest->import();
 ok_manifest({ filter => [qr/(\.git)|(\..+\.yml$)/] });
